--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../assets/css/main_style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js"></script>
-    <script type="module" src="../JS/main.js"></script>
+    <script type="module" src="../PUBLIC/JS/main.js"></script>
   </head>
   <body>
     <div id="top-view">
@@ -66,7 +66,7 @@
                 <img src="/assets/console.png" title="Console" draggable="false">
               </button>
               <button class="connections" id="straight_line">
-                <img src="/assets/direct" title="Copper Straight-Through" draggable="false">
+                <img src="/assets/direct.png" title="Copper Straight-Through" draggable="false">
               </button>
               <button class="connections" id="cross_line">
                 <img src="" title="Copper Cross-over" draggable="false">
