--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
     <title>NetSecSim-Project</title>
 
     <link rel="stylesheet" href="../assets/css/main_style.css">
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js"></script>
     <script type="module" src="../PUBLIC/JS/main.js"></script>
   </head>
