--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js"></script>
-    <script type="module" src="../PUBLIC/JS/main.js"></script>
+    <script type="module" src="../JS/main.js"></script>
   </head>
   <body>
     <div id="top-view">
