--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,8 @@
   <!-- 기존 의존성 (그대로 유지) -->
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="../SCRIPT/jsplumb.browser-ui.umd.js"></script>
-  <script src="../PUBLIC/JS/main.js"></script>
+  <script src="../SCRIPT/jsplumb.browser-ui.es.js"></script>
+  <script type="module" src="../PUBLIC/JS/main.js"></script>
 </head>
 
 <body>
