--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -418,11 +418,15 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     pointer-events: none;
     align-items: center;
     background: transparent;
     border: none;
+  }
+
+  .jtk-connector {
+    z-index: 0 !important;
   }
 
   circle {
