jsPlumb version back

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
   <!-- 기존 의존성 (그대로 유지) -->
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js"></script>
   <script type="module" src="../PUBLIC/JS/main.js"></script>
 </head>
 
