--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -49,6 +49,7 @@ body {
 #nav-links a {
   color: #fff;
   text-decoration: none;
+  margin-left: 26px;
   font-weight: 600;
   font-size: 16px;
   padding: 8px 14px;
