--- a/assets/css/signUp.css
+++ b/assets/css/signUp.css
@@ -7,7 +7,9 @@ body {
     margin: 0;
     background: #f8fafb;
 }
-
+input {
+    display: inline;
+}
 .navbar {
     position: fixed;
     top: 0;
