ip setting basic

--- a/views/index.html
+++ b/views/index.html
@@ -103,6 +103,7 @@
           </div>
         </div>
 
+        <!-- ip 세팅 창(cli 없는 기기들) -->
         <div id="setting-box" style="display: none">
           <div class="input" id="ip">
             <p>IPv4</p>
