선 연결시 인터페이스 지정

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -65,6 +65,25 @@
     transform: scale(1);
   }
 
+  #IntContainer {
+    display: none;
+    width: 130px;
+    height: auto;
+    background-color: white;
+  }
+
+  .IntBox {
+    display: flex;
+    width: calc(inherit -1px);
+    height: calc(inherit - 1px);
+    flex-direction: column;
+    background-color: gray;
+  }
+
+  .clickBox {
+    text-align: start;
+  }
+
   #bottom-view {
     position: fixed;
     bottom: 0;
