IntContainer가 마우스 따라오게 변경

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -67,8 +67,9 @@
 
   #IntContainer {
     width: 130px;
+    height: auto;
     background-color: white;
-    position: relative;
+    position: absolute;
   }
 
   .IntBox {
@@ -77,7 +78,7 @@
     height: 99%;
     flex-direction: column;
     background-color: gray;
-    position: absolute;
+    position: relative;
   }
 
   .clickBox {
