--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -75,8 +75,8 @@
 
   .IntBox {
     display: flex;
-    width: 99%;
-    height: 99%;
+    width: inherit;
+    height: inherit;
     flex-direction: column;
     background-color: gray;
   }
