선 이미지 추가

--- a/views/index.html
+++ b/views/index.html
@@ -80,10 +80,10 @@
               <img src="/assets/direct.png" title="Copper Straight-Through" draggable="false">
             </button>
             <button class="connections" id="cross_line">
-              <img src="" title="Copper Cross-over" draggable="false">
+              <img src="/assets/cross_over.png" title="Copper Cross-over" draggable="false">
             </button>
             <button class="connections" id="fiver_line">
-              <img src="" title="Fiber" draggable="false">
+              <img src="/assets/fiber.png" title="Fiber" draggable="false">
             </button>
             <button class="connections" id="serial_line">
               <img src="/assets/serial.png" title="Serial DTE" draggable="false">
