--- a/views/index.html
+++ b/views/index.html
@@ -56,19 +56,19 @@
               <img src="../assets/switch.png" title="Switch" draggable="false">
             </button>
             <button class="tools" id="hub" data-type="hub">
-              <img src="" title="Hub" draggable="false">
+              <img src="../assets/hub.png" title="Hub" draggable="false">
             </button>
           </div>
 
           <div id="device-ed">
             <button class="tools" id="pc">
-              <img src="" title="PC" draggable="false">
+              <img src="../assets/pc.png" title="PC" draggable="false">
             </button>
             <button class="tools" id="labtop">
-              <img src="" title="Labtop" draggable="false">
+              <img src="../assets/laptop.png" title="Labtop" draggable="false">
             </button>
             <button class="tools" id="server">
-              <img src="" title="Server" draggable="false">
+              <img src="../assets/fileserver.png" title="Server" draggable="false">
             </button>
           </div>
 
